<resources>
    <string name="app_name">LoggingViewsAndActivity</string>
    <string name="share">Share</string>
    <string name="views">Views</string>
    <string name="rating">Rating</string>
    <string name="lessons">Lessons</string>
    <string name="higherorder">Higherorder</string>
    <string name="logout">Logout</string>
    <string name="defaultText">Default</string>
    <string name="shareIntent">This is my share intent</string>
    <string name="rateLesson">Rate this lesson</string>
    <string name="access_Token">fe8700c6-57be-429e-b278-3e49399f54c6</string>
    <string name="baseURL">https://lessons.bloder.xyz</string>
    <string name="addedRating">Rating was added</string>
    <string name="username">Username</string>
    <string name="darkmode">Darkmode</string>
    <string name="save">Save Settings</string>
    <string name="saveNote">Save</string>
    <string name="openNote">LessonNote</string>

</resources>
